--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
      implementation 'com.squareup.retrofit2:retrofit:2.9.0'
      implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
      implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+
+     implementation 'com.google.code.gson:gson:2.9.0'
+
      // Kotlin 协程库
      implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
      implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
