--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // Kotlin
      implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
      implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
   
      // Retrofit 库
      implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -53,4 +57,5 @@ dependencies {
      implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     implementation project (":neworklibrary")
+    implementation 'androidx.core:core-ktx:+'
 }
