--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'androidx.core:core-ktx:+'
+    implementation 'com.google.android.gms:play-services-basement:18.0.1'
 }
