--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,30 +32,34 @@ android {
     }
 }
 
+
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     // Kotlin
-     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
-  
-     // Retrofit 库
-     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
 
-     implementation 'com.google.code.gson:gson:2.9.0'
+    // Retrofit 库
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
-     // Kotlin 协程库
-     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation project (":neworklibrary")
-    implementation 'androidx.core:core-ktx:+'
+    // Kotlin 协程库
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+
+    implementation project(":neworklibrary")
 }
