--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    implementation 'tech.thdev:flow-call-adapter-factory:1.0.0'
+
     // Kotlin 协程库
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
