--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    // Kotlin
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
 
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
@@ -57,9 +55,16 @@ dependencies {
 
     implementation 'tech.thdev:flow-call-adapter-factory:1.0.0'
 
-    // Kotlin 协程库
+    // Kotlin
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-runtime:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
 
