1、修改部分配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,6 @@ dependencies {
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
 
-    implementation project(":neworklibrary")
+   //implementation project(":neworklibrary")
+    implementation 'com.github.CMzhizhe:NetWorkSdkKotlin:v1.0.0'
 }
