--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
+
 
 android {
     namespace 'com.gxx.neworklibrary'
@@ -28,6 +30,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
@@ -53,4 +62,18 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'androidx.core:core-ktx:+'
     implementation 'com.google.android.gms:play-services-basement:18.0.1'
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = "com.github.CMzhizhe"
+            artifactId = "NetWorkSdkKotlin"
+            version = "v1.0.1"
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
