--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,9 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 
+GROUP_ID=com.github.CMzhizhe
+ARTIFACT_ID=NetWorkSdkKotlin
+VERSION=v1.0.1
+
+
 
