--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-apply from: rootProject.file("maven-publish.gradle")
+apply from: rootProject.file("./maven-publish.gradle")
 
 android {
     namespace 'com.gxx.neworklibrary'
