--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,5 @@ dependencyResolutionManagement {
 rootProject.name = "NetWorkSdkKotlin"
 include ':app'
 include ':neworklibrary'
+include ':TestAlibrary'
+include ':TestBlibrary'
