--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -43,15 +43,21 @@ dependencies {
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
     // Retrofit 库build.gradle.kts
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.code.gson:gson:2.9.0'
 
     // Kotlin 协程库
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
+    //startup
+    implementation("androidx.startup:startup-runtime:1.1.1")
+
     implementation 'com.github.CMzhizhe:Retrofit-FlowCallAdapterFactory:v1.0.0'
+
+    //json解析工具
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
 }
