--- a/neworklibrary/src/main/AndroidManifest.xml
+++ b/neworklibrary/src/main/AndroidManifest.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application>
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <!--网络配置-->
+            <meta-data
+                android:name="com.gxx.neworklibrary.provider.HttpConfigInitializer"
+                android:value="androidx.startup" />
+        </provider>
+
+    </application>
 </manifest>
