1、新增公共的接口

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -29,7 +30,7 @@ android {
         jvmTarget = '1.8'
     }
 
-    
+
     tasks.register("copyAgconnecToRelease"){
         doFirst{
             copy {
