--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation 'com.github.CMzhizhe:Retrofit-FlowCallAdapterFactory:v1.0.0'
 
@@ -105,8 +105,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
-    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+
+    implementation 'com.blankj:utilcodex:1.31.1'
+
 
     implementation project(":neworklibrary")
-    //implementation 'com.github.CMzhizhe:NetWorkSdkKotlin:v1.0.2'
 }
