--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -52,12 +52,15 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
-    //startup
-    implementation("androidx.startup:startup-runtime:1.1.1")
-
-    implementation 'com.github.CMzhizhe:Retrofit-FlowCallAdapterFactory:v1.0.0'
-
     //json解析工具
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+
+    //util工具类
+    implementation 'com.blankj:utilcodex:1.31.1'
+    //startup
+    //implementation("androidx.startup:startup-runtime:1.1.1")
+    //implementation 'com.github.CMzhizhe:Retrofit-FlowCallAdapterFactory:v1.0.0'
+    //https://github.com/Blankj/AndroidUtilCode/blob/master/lib/utilcode/README-CN.md
+    //
+    //implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
 }
