--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,9 @@ dependencies {
 
 
     implementation project(":neworklibrary")
+
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 }
