--- a/neworklibrary/build.gradle
+++ b/neworklibrary/build.gradle
@@ -61,4 +61,9 @@ dependencies {
     //util工具类
     implementation 'com.blankj:utilcodex:1.31.1'
 
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
 }
